--- a/docs/openapi.adoc
+++ b/docs/openapi.adoc
@@ -20,14 +20,14 @@ We need to add another extension for OpenAPI. Run the following command:
 
 [source,sh,role="copypaste"]
 ----
-mvn -q quarkus:add-extension -Dextensions="smallrye-openapi" -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs
+mvn quarkus:add-extension -Dextensions="smallrye-openapi" -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs
 ----
 
 You should see:
 
 [source,console]
 ----
-✅ Extension io.quarkus:quarkus-smallrye-openapi has been installed
+[INFO] [SUCCESS] ✅  Extension io.quarkus:quarkus-smallrye-openapi has been installed
 ----
 
 This will add the necessary extension for using OpenAPI, and a graphical frontend extension called *Swagger* which we'll discuss later. It also enables a new RESTful endpoint in the app accessible at `/q/openapi`.
@@ -45,8 +45,8 @@ This endpoint was created as part of the Quarkus OpenAPI Extension, and emits a 
 ----
 openapi: 3.0.3
 info:
-  title: Generated API
-  version: "1.0"
+  title: people API
+  version: 1.0-SNAPSHOT
 paths:
   /hello:
     get:
@@ -64,6 +64,10 @@ paths:
           description: OK
           content:
             application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Person'
 # ... and the rest of your endpoints
 ----
 
@@ -94,7 +98,7 @@ quarkus.swagger-ui.always-include=true
 ----
 ====
 
-Since our app is still running, click on the `web-{{USER_ID}}` link on the right to open the app's landing page in your browser:
+Since our app is still running, click on the `index-webpage` link on the right to open the app's landing page in your browser:
 
 image::weblink.png[swagger,700]
 
