--- a/docs/kafka.adoc
+++ b/docs/kafka.adoc
@@ -274,7 +274,8 @@ Run the following command which will build and deploy using the OpenShift extens
 mvn clean package -DskipTests -f $CHE_PROJECTS_ROOT/quarkus-workshop-m1m2-labs && \
 oc label dc/people app.kubernetes.io/part-of=people --overwrite && \
 oc label dc/postgres-database app.kubernetes.io/part-of=people --overwrite && \
-oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite
+oc annotate dc/people app.openshift.io/connects-to=postgres-database --overwrite && \
+oc rollout status -w dc/people
 ----
 
 The build should take a minute or two to complete.
