--- a/docs/extensions.adoc
+++ b/docs/extensions.adoc
@@ -170,7 +170,7 @@ Start the app by clicking on _Live Coding_:
 
 image::cmd-livecoding.png[livecoding, 700]
 
-This will compile and run the app using `mvn compile quarkus:dev` in a Terminal window. Leave this terminal window open throughout the lab! You will complete the entire lab without shutting down Quarkus Live Coding mode, so be careful not to close the tab (if you do, you re-run it). This is very useful for quick expermentation.
+This will compile and run the app using `mvn compile quarkus:dev` in a Terminal window. Leave this terminal window open throughout the lab! You will complete the entire lab without shutting down Quarkus Live Coding mode, so be careful not to close the tab (if you do, you re-run it). This is very useful for quick experimentation.
 
 [NOTE]
 ====
